--- a/index.html
+++ b/index.html
@@ -291,21 +291,21 @@
 <section class="services">
   <div class="service-list">
     <div class="service-item">
-      <img src="../assets/img/anh7.jpg" alt="hình ảnh">
+      <img src="/assets/img/anh7.jpg" alt="hình ảnh">
       <h3>HÌNH ẢNH</h3>
       <p>Không gian sang trọng, hiện đại, là nơi lý tưởng cho những buổi tiệc cưới đẳng cấp.</p>
       <a href="hinhanh.html" class="btn-more">Xem thêm</a>
     </div>
 
     <div class="service-item">
-      <img src="../assets/img/uudai3.jpg" alt="ưu đãi">
+      <img src="/assets/img/uudai3.jpg" alt="ưu đãi">
       <h3>ƯU ĐÃI</h3>
       <p> Ưu đãi được thiết kế như một lời mời tinh tế gửi đến những vị khách trân quý của JW Marriott</p>
       <a href="uudai.html" class="btn-more">Xem thêm</a>
     </div>
 
     <div class="service-item">
-      <img src="../assets/img/diem1.jpg" alt="điểm đến">
+      <img src="/assets/img/diem1.jpg" alt="điểm đến">
       <h3>ĐIỂM ĐẾN</h3>
       <p>Điểm Đến được tạo nên để dẫn lối du khách khám phá những vùng đất đẹp nhất, giàu bản sắc và tràn đầy năng lượng.</p>
       <a href="diemden.html" class="btn-more">Xem thêm</a>
