--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 <section class="services">
   <div class="service-list">
     <div class="service-item">
-      <img src="/assets/img/anh7.jpg" alt="hình ảnh">
+      <img src="assets/img/anh6.jpg" alt="hình ảnh">
       <h3>HÌNH ẢNH</h3>
       <p>Không gian sang trọng, hiện đại, là nơi lý tưởng cho những buổi tiệc cưới đẳng cấp.</p>
       <a href="hinhanh.html" class="btn-more">Xem thêm</a>
