--- a/index.html
+++ b/index.html
@@ -298,14 +298,14 @@
     </div>
 
     <div class="service-item">
-      <img src="/assets/img/uudai3.jpg" alt="ưu đãi">
+      <img src="assets/img/uudai2.jpg" alt="ưu đãi">
       <h3>ƯU ĐÃI</h3>
       <p> Ưu đãi được thiết kế như một lời mời tinh tế gửi đến những vị khách trân quý của JW Marriott</p>
       <a href="uudai.html" class="btn-more">Xem thêm</a>
     </div>
 
     <div class="service-item">
-      <img src="/assets/img/diem1.jpg" alt="điểm đến">
+      <img src="assets/img/diem5.png" alt="điểm đến">
       <h3>ĐIỂM ĐẾN</h3>
       <p>Điểm Đến được tạo nên để dẫn lối du khách khám phá những vùng đất đẹp nhất, giàu bản sắc và tràn đầy năng lượng.</p>
       <a href="diemden.html" class="btn-more">Xem thêm</a>
